--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -2,13 +2,60 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="Main.html">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&display=swap" rel="stylesheet" />
+	<link rel="stylesheet" href="../CSS/Main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Relvise</title>
 </head>
 <body>
 	<div class="wrapper">
-		
+		<header class="header">
+			<div class="header__container _container">
+				<a href="" class="header__Logo">
+					Relvise
+				</a>
+				<nav class="header__menu menu">
+					<ul class="menu__list">
+						<li class="menu__item">
+							<a href="" class="menu__link">Home</a>
+						</li>
+						<li class="menu__item">
+							<a href="" class="menu__link">Product</a>
+						</li>
+						<li class="menu__item">
+							<a href="" class="menu__link">Pricing</a>
+						</li>
+						<li class="menu__item">
+							<a href="" class="menu__link">Contact</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+
+		<main class="page">
+			<div class="page_main-block main-block">
+				<div class="main-block__container _container">
+					<div class="main-block__body">
+					<h1 class="main-block__title">Finance and Consultancy Solution</h1>
+					<div class="main-block__text">We know how large objects will act, 
+						but things on a small scale.</div>
+					<div class="main-block__buttons">
+						<a href="" class="main-block__button">Get Quote Now</a>
+						<a href="" class="main-block__button main-block__button_border">Learn More</a>
+					</div>
+				</div>
+				<div class="main-block__image _ibg">
+					<img src="../IMG/Main Block/cover.jpg" alt="Cover">
+				</div>
+				</div>
+			</div>
+		</main>
+
+		<div class="footer">
+			I'm Footer
+		</div>
 	</div>
+	<script src="../JS/Script.js"></script>
 </body>
 </html>
