Added some features to the buttons, such as hover effects and made them look more presentable, added some more adaptivity

--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -41,7 +41,7 @@
 					<div class="main-block__text">We know how large objects will act, 
 						but things on a small scale.</div>
 					<div class="main-block__buttons">
-						<a href="" class="main-block__button">Get Quote Now</a>
+						<a href="" class="main-block__button main-block__button_border">Get Quote Now</a>
 						<a href="" class="main-block__button main-block__button_border">Learn More</a>
 					</div>
 				</div>
